[package]
name = "dlvod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
byte-size = "0.2.7"
bytesize = "1.3.0"
ctrlc = "3.4.4"
dialoguer = "0.11.0"
iso8601-duration = "0.2.0"
reqwest = "0.12.2"
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
